2005-10-31  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.3.

2005-10-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Fixed bug with RHEL4-U1's chkconfig where it
	  doesn't handle the existence of a 'Required-Start' without a
	  'Required-Stop' (Thanx to Christopher Holmes).

2005-07-20  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.2.

	* config/x_ac_meta.m4: Removed trailing ';' from m4_pattern_allow.

	* config/x_ac_meta.m4: Added m4_pattern_allow to suppress the
	  "possibly undefined macro" warnings under the new libtool.

2005-07-19  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated FSF address in copyleft.

	* config/argz.m4, config/libtool.m4, config/ltoptions.m4,
	  config/ltsugar.m4, config/ltversion.m4:
	  Added as a result of upgrading to the cvs HEAD release of libtool.
	* aclocal.m4, config/config.h.in, config/ltmain.sh, configure:
	  Updated as a result of upgrading to the cvs HEAD release of libtool.
	* configure.ac: Replaced AC_PROG_LIBTOOL with LT_INIT for new libtool.
	* : Re-bootstrap'd with the cvs HEAD release of libtool version 2.1a,
	  GNU libtool 1.1984 2005/07/11 12:11:25, in order to fix a bug under
	  AIX where the convenience libs were not being added to libmunge;
	  this appears to be the result of libtool's $whole_archive_flag_spec
	  being set to ' ' instead of ''.  This also fixes a bug in the
	  libtool --mode=link cmd for libmunge that failed to properly expand
	  $allow_undefined_flag, thereby causing $archive_expsym_cmds to
	  contain "${wl}-berok" after being eval'd.

	* bootstrap: Removed PATH (in order to use a non-standard libtool).

	* Makefile.am: Replaced PACKAGE with META_NAME.

2005-07-13  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Marked /etc/munge dir with %config attr.

	* munge.spec: Added /etc/munge & /var/lib/munge dirs to %files.

	* README: Updated info regarding defaults in munge_defs.h.

	* src/libcommon/munge_defs.h: Updated values for MUNGE_SOCKET_NAME,